# arxiv-recommendation

./: .coverage  .env copy.example  .env.example  .gitignore  API_REFERENCE.md  CLAUDE.md  CLAUDE_TODO.md  COLLABORATION.md  COMPLETE_UI_IMPROVEMENTS.md  FINAL_IMPROVEMENTS_SUMMARY.md  GEMINI_INTEGRATION.md  IMPLEMENTATION_PLAN.md  RATING_SYSTEM_IMPROVEMENTS.md  README.md  SEMANTIC_SCHOLAR_INTEGRATION.md  TODO.md  UI_IMPROVEMENTS_SUMMARY.md  WEB_INTERFACE.md  coverage.json  coverage_trends.json  docker-compose.yml  fix_rating_button.py  log_tmp.txt  main.py  package-lock.json  package.json  plan.md  pyproject.toml  start_servers.py
.serena/: project.yml
.serena/cache/typescript/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
backend/: __init__.py  api.py  debug_grobid_output.xml
backend/arxiv_recommendation/: __init__.py  agents.py  arxiv_client.py  collection_strategy.py  config.py  database.py  embeddings.py  preferences.py  scheduler.py  scoring_service.py
backend/arxiv_recommendation/services/: __init__.py  backup_service.py  collection_service.py  query_service.py
backend/data/: papers.db
backend/src/: __init__.py  agents.py  arxiv_client.py  collection_strategy.py  config.py  database.py  embeddings.py  gemini_embeddings.py  graph_database.py  preferences.py  recommendations.py  scheduler.py  scoring_service.py
backend/src/data/: papers.db
backend/src/services/: __init__.py  academic_quality_filter.py  ai_reference_validator.py  arxiv_metadata_service.py  backup_service.py  collaborative_service.py  collection_service.py  duckduckgo_academic_service.py  enhanced_reference_service.py  gemini_query_service.py  grobid_service.py  hybrid_reference_service.py  openalex_service.py  provider_factory.py  query_refinement_service.py  query_service.py  reference_service.py  reference_validation_service.py
data/embeddings/: embeddings_cache.h5
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/collection/: CollectionModal.tsx  CollectionProgress.tsx  DatabaseCleanupModal.tsx  ManualPaperModal.tsx
frontend/src/components/common/: DebugPanel.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  Layout.tsx  LoadingSpinner.tsx  Sidebar.tsx
frontend/src/components/graph/: GraphVisualization.tsx
frontend/src/components/papers/: AbstractRenderer.tsx  HighScoredPapers.tsx  PaperCard.tsx  PaperReferences.tsx  PaperScoreDisplay.tsx  ScoredPapersView.tsx
frontend/src/components/rating/: StarRating.tsx
frontend/src/hooks/: useErrorHandler.ts
frontend/src/pages/: AnalyticsPage.tsx  CollectPapersPage.tsx  DashboardPage.tsx  PaperDetailPage.tsx  PapersPage.tsx  RatingPage.tsx  ScoredPapersPage.tsx  SearchPage.tsx  SettingsPage.tsx
frontend/src/services/: analyticsService.ts  api.ts  index.ts  papersService.ts  ratingsService.ts  systemService.ts
frontend/src/store/: index.ts
frontend/src/store/middleware/: apiMiddleware.ts
frontend/src/store/slices/: papersSlice.ts  ratingsSlice.ts  systemSlice.ts  userSlice.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts  index.ts  paper.ts  rating.ts  user.ts
frontend/tests/: star-rating-optimistic.spec.ts
scripts/: README.md  analyze_citations_2207_04015.py  backup_database.py  check_cache_stats.py  collect_optimal_transport.py  collect_papers_by_topic.py  comparative_similarity_analysis.py  comprehensive_analysis_2207_04015.py  coverage_monitor.py  debug_pyalex_references.py  gpt_query_generator.py  migrate_embeddings.py  script_utils.py  setup_database.py  similarity_analysis.py
scripts/collection_configs/: optimal_transport.json
similarity_analysis_results/: all_papers_with_topics.json  analysis_summary.json  econometrics_papers.json  econometrics_queries.json  most_similar_cross_topic_pairs.json  optimal_transport_papers.json  optimal_transport_queries.json  paper_embeddings.npz  similarity_matrix.csv  similarity_matrix.npz  similarity_statistics.json  single_cell_analysis_papers.json  single_cell_analysis_queries.json  transformer_papers.json  transformer_queries.json
src/: run_web.py
src/arxiv_recommendation/: database.py  recommendations.py
src/web/: app.py
tests/: README.md  conftest.py
